disk_space - add endpoint to retrieve disk space
